--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@auth0/auth0-react": "^2.2.4",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-table": "^8.16.0",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.378.0",
     "react": "^18.2.0",
