--- a/BE.yaml
+++ b/BE.yaml
@@ -259,6 +259,54 @@ paths:
                     type: array
                     items:
                       type: number
+  /posts/count:
+    get:
+      description: returns a count of all posts
+      responses:
+        '200':
+          description: Successfully returned a count of all posts
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  count:
+                    type: number
+  /posts/{id}:
+    parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: number
+    get:
+      description: returns a post by id
+      responses:
+        '200':
+          description: Successfully returned a post
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: number
+                  content:
+                    type: string
+                  creationDate:
+                    type: string
+                  updateDate:
+                    type: string
+                  title:
+                    type: string
+                  categoryId:
+                    type: number
+                  userId:
+                    type: string
+                  tagIds:
+                    type: array
+                    items:
+                      type: number
     put:
       description: Allows to update a post
       requestBody:
@@ -272,7 +320,6 @@ paths:
                 - content
                 - categoryId
                 - tagIds
-                - id
                 - userId
               properties:
                 title:
@@ -285,8 +332,6 @@ paths:
                   type: array
                   items:
                     type: number
-                id:
-                  type: number
                 userId:
                   type: string
       responses:
@@ -315,12 +360,115 @@ paths:
                     type: array
                     items:
                       type: number
-  /posts/count:
-    get:
-      description: returns a count of all posts
+    delete:
+      description: Allows to delete a post
       responses:
         '200':
-          description: Successfully returned a count of all posts
+          description: Successfully deleted post
+          content:
+            application/json:
+              schema:
+                type: string
+  /comments:
+    get:
+      description: returns a list of comments related to the post
+      parameters:
+        - name: postId
+          in: query
+          description: id of the post
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Successfully returned a list of comments
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/CommentResponse"
+    post:
+      description: Allows to create a new comment
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - postId
+                - content
+                - userId
+              properties:
+                content:
+                  type: string
+                postId:
+                  type: number
+                userId:
+                  type: string
+                parentId:
+                  type: number
+      responses:
+        '201':
+          description: Successfully created a new comment
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/CommentResponse"
+  /comments/{id}:
+    parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: number
+    patch:
+      description: Allows to update a comment
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              anyOf:
+                - required:
+                    - userId
+                    - content
+                  properties:
+                    content:
+                      type: string
+                    userId:
+                      type: string
+                - required:
+                    - likedByUserId
+                  properties:
+                    likedByUserId:
+                      type: string
+                - required:
+                    - dislikedByUserId
+                  properties:
+                    dislikedByUserId:
+                      type: string
+      responses:
+        '201':
+          description: Successfully updated comment
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/CommentResponse"
+    delete:
+      description: Allows to delete a comment
+      responses:
+        '200':
+          description: Successfully deleted comment
+          content:
+            application/json:
+              schema:
+                type: string
+  /comments/count:
+    get:
+      description: returns a count of all comments related to the post
+      responses:
+        '200':
+          description: Successfully returned a count of all comments related to the post
           content:
             application/json:
               schema:
@@ -328,38 +476,27 @@ paths:
                 properties:
                   count:
                     type: number
-  /posts/{id}:
-    get:
-      description: returns a post by id
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
+
+components:
+  schemas:
+    CommentResponse:
+      type: object
+      properties:
+        id:
+          type: number
+        title:
+          type: string
+        content:
+          type: string
+        creationDate:
+          type: string
+        updateDate:
+          type: string
+        categoryId:
+          type: number
+        userId:
+          type: string
+        tagIds:
+          type: array
+          items:
             type: number
-      responses:
-        '200':
-          description: Successfully returned a post
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  id:
-                    type: number
-                  content:
-                    type: string
-                  creationDate:
-                    type: string
-                  updateDate:
-                    type: string
-                  title:
-                    type: string
-                  categoryId:
-                    type: number
-                  userId:
-                    type: string
-                  tagIds:
-                    type: array
-                    items:
-                      type: number
