Comments total block

--- a/BE.yaml
+++ b/BE.yaml
@@ -384,7 +384,9 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/CommentResponse"
+                type: array
+                items:
+                  $ref: "#/components/schemas/CommentResponse"
     post:
       description: Allows to create a new comment
       requestBody:
@@ -466,6 +468,12 @@ paths:
   /comments/count:
     get:
       description: returns a count of all comments related to the post
+      parameters:
+        - name: postId
+          in: query
+          description: id of the post
+          schema:
+            type: integer
       responses:
         '200':
           description: Successfully returned a count of all comments related to the post
@@ -474,7 +482,7 @@ paths:
               schema:
                 type: object
                 properties:
-                  count:
+                  commentsTotal:
                     type: number
 
 components:
@@ -484,19 +492,19 @@ components:
       properties:
         id:
           type: number
-        title:
+        userId:
           type: string
         content:
           type: string
-        creationDate:
-          type: string
-        updateDate:
-          type: string
-        categoryId:
-          type: number
-        userId:
-          type: string
-        tagIds:
+        likedBy:
           type: array
           items:
-            type: number
+            type: string
+        dislikedBy:
+          type: array
+          items:
+            type: string
+        postId:
+          type: number
+        parentId:
+          type: number
