Comments, styles, some improvements and simplifications (#9)

--- a/BE.yaml
+++ b/BE.yaml
@@ -99,39 +99,9 @@ paths:
                       type: number
                     name:
                       type: string
-  /users/{id}:
-    get:
-      description: returns information about an user by id
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: string
-      responses:
-        '200':
-          description: Successfully returned user data
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  id:
-                    type: string
-                  name:
-                    type: string
-                  surname:
-                    type: string
-                  nickname:
-                    type: string
-    post:
-      description: Allows to add missing information about user
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: string
+  /users:
+    put:
+      description: Allows to add or update information about user
       requestBody:
         required: true
         content:
@@ -141,16 +111,13 @@ paths:
               required:
                 - id
                 - name
-                - surname
-                - nickname
+                - picture
               properties:
                 id:
                   type: string
                 name:
                   type: string
-                surname:
-                  type: string
-                nickname:
+                picture:
                   type: string
       responses:
         '201':
@@ -200,12 +167,20 @@ paths:
                       type: string
                     categoryId:
                       type: number
-                    userId:
-                      type: string
                     tagIds:
                       type: array
                       items:
                         type: number
+                    user:
+                      type: object
+                      properties:
+                        id:
+                          type: string
+                        name:
+                          type: string
+                        picture:
+                          type: string
+
     post:
       description: Allows to create a new post
       requestBody:
@@ -227,12 +202,19 @@ paths:
                   type: string
                 categoryId:
                   type: number
-                userId:
-                  type: string
                 tagIds:
                   type: array
                   items:
                     type: number
+                user:
+                  type: object
+                  properties:
+                    id:
+                      type: string
+                    name:
+                      type: string
+                    picture:
+                      type: string
       responses:
         '201':
           description: Successfully created a new post
@@ -259,6 +241,61 @@ paths:
                     type: array
                     items:
                       type: number
+  /posts/count:
+    get:
+      description: returns a count of all posts
+      responses:
+        '200':
+          description: Successfully returned a count of all posts
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  count:
+                    type: number
+  /posts/{id}:
+    parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: number
+    get:
+      description: returns a post by id
+      responses:
+        '200':
+          description: Successfully returned a post
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: number
+                  content:
+                    type: string
+                  creationDate:
+                    type: string
+                  updateDate:
+                    type: string
+                  title:
+                    type: string
+                  categoryId:
+                    type: number
+                  tagIds:
+                    type: array
+                    items:
+                      type: number
+                  user:
+                    type: object
+                    properties:
+                      id:
+                        type: string
+                      name:
+                        type: string
+                      picture:
+                        type: string
     put:
       description: Allows to update a post
       requestBody:
@@ -272,7 +309,6 @@ paths:
                 - content
                 - categoryId
                 - tagIds
-                - id
                 - userId
               properties:
                 title:
@@ -285,10 +321,15 @@ paths:
                   type: array
                   items:
                     type: number
-                id:
-                  type: number
-                userId:
-                  type: string
+                user:
+                  type: object
+                  properties:
+                    id:
+                      type: string
+                    name:
+                      type: string
+                    picture:
+                      type: string
       responses:
         '200':
           description: Successfully updated post title or/and content
@@ -315,51 +356,165 @@ paths:
                     type: array
                     items:
                       type: number
-  /posts/count:
-    get:
-      description: returns a count of all posts
+    delete:
+      description: Allows to delete a post
       responses:
         '200':
-          description: Successfully returned a count of all posts
+          description: Successfully deleted post
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  count:
-                    type: number
-  /posts/{id}:
+                type: string
+  /comments:
     get:
-      description: returns a post by id
+      description: returns a list of comments related to the post
       parameters:
-        - name: id
-          in: path
-          required: true
+        - name: postId
+          in: query
+          description: id of the post
           schema:
-            type: number
+            type: integer
       responses:
         '200':
-          description: Successfully returned a post
+          description: Successfully returned a list of comments
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/CommentResponse"
+    post:
+      description: Allows to create a new comment
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - postId
+                - content
+                - userId
+              properties:
+                content:
+                  type: string
+                postId:
+                  type: number
+                userId:
+                  type: string
+                parentId:
+                  type: number
+      responses:
+        '201':
+          description: Successfully created a new comment
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/CommentResponse"
+  /comments/{id}:
+    parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: number
+    patch:
+      description: Allows to update a comment
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              anyOf:
+                - required:
+                    - userId
+                    - content
+                  properties:
+                    content:
+                      type: string
+                    userId:
+                      type: string
+                - required:
+                    - likedByUserId
+                  properties:
+                    likedByUserId:
+                      type: string
+                - required:
+                    - dislikedByUserId
+                  properties:
+                    dislikedByUserId:
+                      type: string
+      responses:
+        '201':
+          description: Successfully updated comment
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/CommentResponse"
+    delete:
+      description: Allows to delete a comment
+      responses:
+        '200':
+          description: Successfully deleted comment
+          content:
+            application/json:
+              schema:
+                type: string
+  /comments/count:
+    get:
+      description: returns a count of all comments related to the post
+      parameters:
+        - name: postId
+          in: query
+          description: id of the post
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Successfully returned a count of all comments related to the post
           content:
             application/json:
               schema:
                 type: object
                 properties:
-                  id:
+                  commentsTotal:
                     type: number
-                  content:
-                    type: string
-                  creationDate:
-                    type: string
-                  updateDate:
-                    type: string
-                  title:
-                    type: string
-                  categoryId:
-                    type: number
-                  userId:
-                    type: string
-                  tagIds:
-                    type: array
-                    items:
-                      type: number
+
+components:
+  schemas:
+    CommentResponse:
+      type: object
+      properties:
+        id:
+          type: number
+        content:
+          type: string
+        count:
+          type: object
+          properties:
+            likedBy:
+              type: number
+            dislikedBy:
+              type: number
+        postId:
+          type: number
+        parentId:
+          type: number
+        user:
+          type: object
+          properties:
+            id:
+              type: string
+            name:
+              type: string
+            picture:
+              type: string
+        creationDate:
+          type: string
+        updateDate:
+          type: string
+        isLiked:
+          type: boolean
+        isDisliked:
+          type: boolean
